# licornea_tools

./: ..gitignore.swp  .gitignore  CMakeLists.txt  Doxyfile  README.md  batch_texture2yuv.sh  texture2yuv.sh
calibration/: CMakeLists.txt  batch_chessboard_calibrate.py  calibrate_distortion.cc  calibrate_extrinsic.cc  denoise_extrinsic_row.cc  find_chessboard.cc  optical_flow.cc  undistort.cc
calibration/lib/: calibration_correspondence.cc  calibration_correspondence.h  chessboard.cc  chessboard.h  img2img_correspondence.cc  img2img_correspondence.h
calibration/src/: calibrate_distortion.cc  calibrate_extrinsic.cc  find_chessboard.cc  undistort.cc
calibration/src/lib/: calibration_correspondence.cc  calibration_correspondence.h  chessboard.cc  chessboard.h  common.cc
camera/: export_mpeg.cc  import_mpeg.cc  import_xml.py  make_regular_row.py  transform.cc  visualize.cc
camera_tools/: Makefile  export_mpeg.cc  import_mpeg.cc  parameters_xml2vsrs.py  transform.cc  visualize.cc
camera_tools/lib/: camera.cc  camera.h  camera.tcc  camera_mpeg.cc  camera_mpeg.h  eigen.h
camera_transform/: Makefile  camera_transform.cc
cg/: report.odt
dataset/: flip.py  slice.py
docs/: _config.yml  cameras.md  dataset.md  implementation.md  index.md  installation.md  make_index.py  make_sidebar.py
docs/_includes/: sidebar.html  sidebar.md
docs/_layouts/: default.html
docs/data/: cameras.md  dataset.md  experiments.md  feature_points.md  feature_slopes.md  image_correspondences.md  intrinsics.md  obj_img_cors.md  references_grid.md  relative_camera_positions.md  reprojection.md  straight_depths.md  view_homography.md
docs/epipolar_sketch/: sketch.js
docs/tutorial/: calibrate_kinect.md  export_to_vsrs.md  import_from_kinect.md  vsrs_experiments.md
epipolar_sketch/: sketch.js
extrinsic_convert/: Makefile  extrinsic_convert.cc
kinect/: collect_col.py  collect_fig8.py  color_point_cloud.cc  depth_cross_reprojection.py  depth_point_cloud.cc  depth_reprojection.cc  dual_reprojection.cc  feature_depth_estimate.cc  fetch_intrinsics.cc  import_raw_data.py  make_vsrs_data.py  make_vsrs_data_simulate.py  multiprojection_window.py  point_cloud_reprojection.cc  texture_reprojection.cc  vsrs_disparity.cc
kinect/lib/: depth_densify.cc  depth_densify.h  depth_io.cc  depth_io.h  freenect2.cc  freenect2.h  kinect_intrinsics.cc  kinect_intrinsics.h  multiprojection.cc  multiprojection.h  texture_io.cc  texture_io.h
kinect/unused/: make_vsrs_data.py  make_vsrs_data_simulate.py  point_cloud_reprojection.cc
kinect_tools/: CMakeLists.txt  batch_depth2disparity.sh  depth2disparity.sh  make_vsrs_data.py
kinect_tools/src/: depth_point_cloud.cc  depth_reprojection.cc  texture_reprojection.cc  vsrs_disparity.cc
kinect_tools/src/lib/: common.h  depth_io.cc  depth_io.h
lib/: camera.cc  camera.h  camera.tcc  camera_mpeg.h  dataset.cc  dataset.h  eigen.h  image_correspondence.cc  image_correspondence.h  json.cc  json.h  nd.h  opencv.h  ply_exporter.cc  ply_exporter.tcc  ply_importer.cc  ply_importer.h
lib/pylib/: __init__.py  dataset.py  progress.py  utility.py
lib/utility/: io.h  misc.tcc  string.cc  string.h
misc/: copy_json.cc  list_skip_n_experiments.py  make_vsrs_config.py  psnr.cc  run_vsrs.py  run_vsrs_experiments.py  view_depth.cc  vsrs_pointcloud.cc  yuv2png.sh
mpeg_0317/: import_xml_bands.sh  make_vsrs_config.py  test_depth.sh  test_depth_conf.txt  zipper_band1.py  zipper_band2.py  zipper_band3.py
newdata/: intr.json  kinect_reprojection.json
newdata/x0407/: parameters.json
pointcloud/: CMakeLists.txt
report/cg/: cg.aux  cg.out  cg.tex  cg.toc  depth_comp.numbers  depthscmp.ods  differentdepths.graffle  differentdepthsview.graffle  kinect.aux  kinect.tex  opticalflow.dia
report/kinect/: .report.tex.ini  kinect.aux  kinect.tex
src/calibration/: calibrate_distortion.cc  calibrate_extrinsic.cc  calibrate_intrinsics.cc  cameras_from_checkerboards.cc  cameras_on_line.cc  centers_on_plane.cc  cg_apply_all_homographies.py  cg_calibrate_cors.cc  cg_calibrate_cors_.cc  cg_choose_refgrid.cc  cg_compare_straight_depths.cc  cg_cors_viewer.cc  cg_cors_viewer_f.cc  cg_cors_viewer_v.cc  cg_estimate_rotation.cc  cg_feature_filter.cc  cg_feature_straight_depths.cc  cg_filter_features.cc  cg_generate_artificial.cc  cg_measure_optical_flow_slopes.cc  cg_model_optical_flow_slopes.cc  cg_optical_flow_cors.cc  cg_optical_flow_features.cc  cg_optical_flow_slopes.cc  cg_predict_optical_flow_slopes.cc  cg_rcpos_from_cors.cc  cg_rectification_cors.cc  cg_rectification_homographies.cc  cg_rectify.cc  cg_rectify_images.py  cg_redistribute_cors.cc  cg_rotation_from_depths.cc  cg_rotation_from_fslopes.cc  cg_rotation_from_fslopes_direct.cc  cg_simulation.cc  cg_slopes_viewer.cc  cg_stitch_cameras.cc  cg_straight_depths_from_disparity.cc  cg_unrotate_depth_map.cc  cg_visualize_optical_flow_slopes.cc  (+31 more)
src/camera/: export_mpeg.cc  import_matlab.py  import_mpeg.cc  make_regular_row.py  merge_cameras.cc  restrict_cameras.cc  transform.cc  visualize.cc
src/dataset/: duplicates.cc  flip.py  missing.cc  slice.py  view_dataset.cc
src/kinect/: calibrate_color_ir_homography.cc  calibrate_color_ir_reprojection.cc  checkerboard_color_depth.cc  checkerboard_depth_parallel.cc  checkerboard_depth_samples.cc  checkerboard_depth_stat.cc  checkerboard_depth_viewer.cc  checkerboard_samples.cc  close_kinect.cc  color_intrinsic_reprojection.cc  cross_reprojection_single.cc  depth_point_cloud.cc  depth_remapping.cc  depth_reprojection.cc  fetch_internal_parameters.cc  fetch_intrinsics.cc  import_raw_data.py  internal_ir_intrinsics.cc  ir_distortion_viewer.cc  ir_intrinsic_reprojection.cc  live_checkerboard_distance.cc  live_parallel_checkerboard.cc  live_view.cc  parallel_wall.cc  remapping_viewer.cc  reprojection_viewer.cc  viewer.cc
src/lib/: args.cc  args.h  assert.h  border.cc  border.h  camera.cc  camera.h  camera.tcc  camera_mpeg.cc  color.cc  color.h  common.h  dataset.cc  dataset.h  eigen.h  filesystem.h  filesystem.posix.cc  filesystem.win.cc  image_correspondence.cc  image_correspondence.h  io.cc  (+35 more)
(+2671 files in other folders)
